--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,11 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user: one
-  title: MyString
-  content: MyText
-
-two:
-  user: two
-  title: MyString
-  content: MyText
+report_written_by_taro:
+  user: taro
+  title: "晴れが好き"
+  content: "明日晴れたらな"
